# 3x4GenTask

./: .gitignore  Makefile  README.md  pyproject.toml  windows_setup.md
analysis/: acwr_dashboard.py  fosters_dashboard.py  long_run_mechanics_hr.py  long_run_vr.py
conda_envs/: garmin-fit.yml
experiments/: comrades_orchestrator.py  core_recovery_analysis.py  pause_alignment.py  route_analysis.py  run_recovery_analysis.py  sleep_check.py
preprocessing/: comrades_orchestrator.py  extraction.py  fit_to_tsv_folder.py  orchestrator.py  route_matching.py  smoothing.py  utils.py  workout_summary.py
reporting/: global_html_report.py
